MPfm 0.5.0.1 - Added ImportAudioFiles class which will replace the UpdateLibrary process.   It uses the Reactive Extensions.   There is still a lot of work to do on the class. - Bug fixes on MPfmGateway and SQLiteGateway. - Changed comments/variable names on PeakFile to make it match with UpdateLibrary (and future classes based on the Reactive Extensions)
Related to issue #160.


git-svn-id: http://hamster-svn/svn/repos/base@138 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.Library/MPfm.Library.csproj
+++ b/MPfm/branches/current/MPfm.Library/MPfm.Library.csproj
@@ -48,6 +48,7 @@
     <Reference Include="System.Data.SQLite, Version=1.0.76.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139, processorArchitecture=x86" />
     <Reference Include="System.Data.SQLite.Linq, Version=1.0.76.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139, processorArchitecture=MSIL" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Reactive, Version=1.0.10621.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Security" />
     <Reference Include="System.Windows.Forms" />
@@ -59,6 +60,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MPfmGateway.cs" />
+    <Compile Include="ImportAudioFiles.cs" />
     <Compile Include="SQLiteGateway.cs" />
     <Compile Include="ConvertLibrary.cs" />
     <Compile Include="Folder.cs" />
@@ -73,6 +75,7 @@
     <Content Include="Lib\SQLite.Interop.dll" />
     <Content Include="Lib\System.Data.SQLite.dll" />
     <Content Include="Lib\System.Data.SQLite.Linq.dll" />
+    <Content Include="Lib\System.Reactive.dll" />
     <Content Include="Lib\taglib-sharp.dll" />
   </ItemGroup>
   <ItemGroup>
