MPfm 0.5.0.1 - Changed the name of the older UpdateLibraryProgressData (now OldUpdateLibraryProgressData, OldUpdateLibraryException). - This paved the way for the new version of these classes to be used with the UpdateLibrary class (using Reactive Extensions). - Separated the classes into different file and moved into a proper folder.
Related to issue #160.


git-svn-id: http://hamster-svn/svn/repos/base@139 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.Library/MPfm.Library.csproj
+++ b/MPfm/branches/current/MPfm.Library/MPfm.Library.csproj
@@ -60,7 +60,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MPfmGateway.cs" />
-    <Compile Include="ImportAudioFiles.cs" />
+    <Compile Include="UpdateLibrary\UpdateLibraryDoneData.cs" />
+    <Compile Include="UpdateLibrary\UpdateLibraryProgressData.cs" />
+    <Compile Include="UpdateLibrary\UpdateLibraryException.cs" />
+    <Compile Include="UpdateLibrary\UpdateLibrary.cs" />
     <Compile Include="SQLiteGateway.cs" />
     <Compile Include="ConvertLibrary.cs" />
     <Compile Include="Folder.cs" />
