MPfm 0.5.0.1 - Bug fix: IsRecursive in the Folder object had the wrong value. - Bug fix: When the UpdateLibrary process hit an error, the whole process was stopped. - More work on the next UpdateLibrary process using Reactive Extensions. - Minor bug fixes in the gateway classes.
Related to issue #160 and issue #162.


git-svn-id: http://hamster-svn/svn/repos/base@140 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.Library/MPfm.Library.csproj
+++ b/MPfm/branches/current/MPfm.Library/MPfm.Library.csproj
@@ -60,6 +60,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MPfmGateway.cs" />
+    <Compile Include="UpdateLibrary\UpdateLibraryStep.cs" />
     <Compile Include="UpdateLibrary\UpdateLibraryDoneData.cs" />
     <Compile Include="UpdateLibrary\UpdateLibraryProgressData.cs" />
     <Compile Include="UpdateLibrary\UpdateLibraryException.cs" />
