--- a/MPfm/branches/current/MPfm.Core/MPfm.Core.csproj
+++ b/MPfm/branches/current/MPfm.Core/MPfm.Core.csproj
@@ -72,11 +72,13 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.Web" />
     <Reference Include="System.Xml" />
+    <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ColorManipulation.cs" />
     <Compile Include="Config.cs" />
     <Compile Include="Conversion.cs" />
+    <Compile Include="XMLHelper.cs" />
     <Compile Include="ImageManipulation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tracing.cs" />
