MPfm 0.5.0.1 - New configuration engine: changed name to MPfmConfiguration. - Sections are now known as ConfigurationSection (ex: AudioConfigurationSection). - Added comments.
Related to issue #161.


git-svn-id: http://hamster-svn/svn/repos/base@142 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm/MPfm.csproj
+++ b/MPfm/branches/current/MPfm/MPfm.csproj
@@ -103,7 +103,9 @@
     <Compile Include="Classes\DriverComboBoxItem.cs" />
     <Compile Include="Classes\MPFMConfig.cs" />
     <Compile Include="Classes\SongQuery.cs" />
-    <Compile Include="Configuration\CustomConfig.cs" />
+    <Compile Include="Configuration\AudioConfigurationSection.cs" />
+    <Compile Include="Configuration\ControlsConfigurationSection.cs" />
+    <Compile Include="Configuration\MPfmConfiguration.cs" />
     <Compile Include="Other Screens\frmAddEditLoop.cs">
       <SubType>Form</SubType>
     </Compile>
