MPfm 0.5.0.1 - Finished work on the new configuration engine. It now works really great!   Still need to hook everything in the application to the new configuration engine and   get rid of the old shitty MPFMConfig class (finally!).
Related to issue #161.


git-svn-id: http://hamster-svn/svn/repos/base@144 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm/MPfm.csproj
+++ b/MPfm/branches/current/MPfm/MPfm.csproj
@@ -113,6 +113,8 @@
     <Compile Include="Configuration\General\GeneralConfigurationKeyValue.cs" />
     <Compile Include="Configuration\General\GeneralConfigurationSection.cs" />
     <Compile Include="Configuration\MPfmConfiguration.cs" />
+    <Compile Include="Configuration\Windows\WindowConfiguration.cs" />
+    <Compile Include="Configuration\Windows\WindowsConfigurationSection.cs" />
     <Compile Include="Other Screens\frmAddEditLoop.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -253,7 +255,7 @@
     <None Include="app.manifest" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Config.xml">
+    <Content Include="ExampleConfig.xml">
       <SubType>Designer</SubType>
     </Content>
     <Content Include="Lib\SQLite.Interop.dll" />
