MPfm 0.5.0.1 - Configuration bug fixes.
Related to issue #161.


git-svn-id: http://hamster-svn/svn/repos/base@147 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm/MPfm.csproj
+++ b/MPfm/branches/current/MPfm/MPfm.csproj
@@ -101,7 +101,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Classes\DriverComboBoxItem.cs" />
-    <Compile Include="Classes\MPFMConfig.cs" />
     <Compile Include="Classes\SongQuery.cs" />
     <Compile Include="Configuration\Audio\AudioConfigurationSection.cs" />
     <Compile Include="Configuration\Audio\AudioMixerConfigurationSection.cs" />
@@ -254,7 +253,7 @@
     <None Include="app.manifest" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="ExampleConfig.xml">
+    <Content Include="Configuration\ExampleConfig.xml">
       <SubType>Designer</SubType>
     </Content>
     <Content Include="Lib\SQLite.Interop.dll" />
