--- a/MPfm/branches/current/MPfm.Player/MPfm.Player.csproj
+++ b/MPfm/branches/current/MPfm.Player/MPfm.Player.csproj
@@ -54,6 +54,7 @@
     <Content Include="Lib\Bass.Net.dll" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Exceptions\PlayerCreateStreamException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RepeatType.cs" />
     <Compile Include="EQPreset.cs" />
