--- a/MPfm/branches/current/MPfm.Player/MPfm.Player.csproj
+++ b/MPfm/branches/current/MPfm.Player/MPfm.Player.csproj
@@ -54,17 +54,18 @@
     <Content Include="Lib\Bass.Net.dll" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Events\PlayerStreamCallbackData.cs" />
     <Compile Include="Exceptions\PlayerCreateStreamException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RepeatType.cs" />
-    <Compile Include="EQPreset.cs" />
-    <Compile Include="EQPresetBand.cs" />
-    <Compile Include="Events.cs" />
-    <Compile Include="Loop.cs" />
-    <Compile Include="Marker.cs" />
+    <Compile Include="Objects\RepeatType.cs" />
+    <Compile Include="Objects\EQPreset.cs" />
+    <Compile Include="Objects\EQPresetBand.cs" />
+    <Compile Include="Events\PlayerAudioFileFinishedData.cs" />
+    <Compile Include="Objects\Loop.cs" />
+    <Compile Include="Objects\Marker.cs" />
     <Compile Include="Player.cs" />
-    <Compile Include="Playlist.cs" />
-    <Compile Include="PlaylistItem.cs" />
+    <Compile Include="Objects\Playlist.cs" />
+    <Compile Include="Objects\PlaylistItem.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
