MPfm 0.5.0.2 - Library: Added the CreateDatabaseFile and GetCreateDatabaseSQL methods   Added an embeddable SQL script to be executed for creating a new database. - Main window: Now creates a database file if it doesn't exist using the embedded SQL script. - Moved the configuration file, database file and log file to the user application data folder.
Related to issue #169 and issue #170.


git-svn-id: http://hamster-svn/svn/repos/base@156 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.Library/MPfm.Library.csproj
+++ b/MPfm/branches/current/MPfm.Library/MPfm.Library.csproj
@@ -75,6 +75,7 @@
     <Service Include="{3259AA49-8AA1-44D3-9025-A0B520596A8C}" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Scripts\CreateDatabase.sql" />
     <Content Include="Lib\Bass.Net.dll" />
     <Content Include="Lib\SQLite.Interop.dll" />
     <Content Include="Lib\System.Data.SQLite.dll" />
