mp4m.org 1.2.1 - Added screenshots for 0.5.0.3 - Misc modifications on text
git-svn-id: http://hamster-svn/svn/repos/base@169 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/mp4m.org/trunk/mp4m.org/mp4m.org.csproj
+++ b/mp4m.org/trunk/mp4m.org/mp4m.org.csproj
@@ -160,6 +160,18 @@
     <Content Include="Images\screenshots\0.4.4.9\splash_t.png" />
     <Content Include="Images\screenshots\0.4.4.9\update_library.png" />
     <Content Include="Images\screenshots\0.4.4.9\update_library_t.png" />
+    <Content Include="Images\screenshots\0.5.0.3\loop.png" />
+    <Content Include="Images\screenshots\0.5.0.3\loop_t.png" />
+    <Content Include="Images\screenshots\0.5.0.3\main.png" />
+    <Content Include="Images\screenshots\0.5.0.3\main_t.png" />
+    <Content Include="Images\screenshots\0.5.0.3\marker.png" />
+    <Content Include="Images\screenshots\0.5.0.3\marker_t.png" />
+    <Content Include="Images\screenshots\0.5.0.3\metadata.png" />
+    <Content Include="Images\screenshots\0.5.0.3\metadata_t.png" />
+    <Content Include="Images\screenshots\0.5.0.3\playlist.png" />
+    <Content Include="Images\screenshots\0.5.0.3\playlist_t.png" />
+    <Content Include="Images\screenshots\0.5.0.3\splash.png" />
+    <Content Include="Images\screenshots\0.5.0.3\splash_t.png" />
     <Content Include="Images\screenshots\PlaybackEngineV4Demo.png" />
     <Content Include="Images\screenshots\PlaybackEngineV4Demo_t.png" />
     <Content Include="Images\screenshots\scanmp3headers.png" />
