--- a/MPfm/branches/current/MPfm/MPfm.csproj
+++ b/MPfm/branches/current/MPfm/MPfm.csproj
@@ -254,6 +254,8 @@
     <Content Include="Lib\System.Data.SQLite.Linq.dll" />
     <Content Include="Lib\taglib-sharp.dll" />
     <Content Include="MPFM.ico" />
+    <Content Include="MPfm_SmallOnly.ico" />
+    <None Include="Resources\user.png" />
     <None Include="Resources\MPFM_Splash_0.5.0.3.png" />
     <None Include="Resources\error.png" />
     <None Include="Resources\time1.png" />
