MPfm 0.5.0.4 - Fixed playlist window refresh bug - Removed useless lib files
git-svn-id: http://hamster-svn/svn/repos/base@175 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.Sound/MPfm.Sound.csproj
+++ b/MPfm/branches/current/MPfm.Sound/MPfm.Sound.csproj
@@ -122,6 +122,7 @@
     <Content Include="Lib\bassasio.dll" />
     <Content Include="Lib\bassflac.dll" />
     <Content Include="Lib\basswasapi.dll" />
+    <Content Include="Lib\bass_ape.dll" />
     <Content Include="Lib\bass_fx.dll" />
     <Content Include="Lib\taglib-sharp.dll" />
   </ItemGroup>
