MPfm 0.5.0.4 - Renamed SoundFormatFilter to AudioFileFormat - Removed FilterSoundFormat and replaced by AudioFileFormat
git-svn-id: http://hamster-svn/svn/repos/base@176 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.Sound/MPfm.Sound.csproj
+++ b/MPfm/branches/current/MPfm.Sound/MPfm.Sound.csproj
@@ -89,6 +89,7 @@
     <Compile Include="Bass.Net\Exception.cs" />
     <Compile Include="Bass.Net\Base.cs" />
     <Compile Include="ConvertAudio.cs" />
+    <Compile Include="AudioFileFormat.cs" />
     <Compile Include="PeakFile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="XingInfoHeaderReader.cs" />
