MPfm 0.5.0.4 - Added unofficial support for TTA, MPC, and WV files. - OFR files are left for now since they depend on OptimFROG.dll.
git-svn-id: http://hamster-svn/svn/repos/base@179 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.Sound/MPfm.Sound.csproj
+++ b/MPfm/branches/current/MPfm.Sound/MPfm.Sound.csproj
@@ -123,8 +123,12 @@
     <Content Include="Lib\bassasio.dll" />
     <Content Include="Lib\bassflac.dll" />
     <Content Include="Lib\basswasapi.dll" />
+    <Content Include="Lib\basswv.dll" />
     <Content Include="Lib\bass_ape.dll" />
     <Content Include="Lib\bass_fx.dll" />
+    <Content Include="Lib\bass_mpc.dll" />
+    <Content Include="Lib\bass_ofr.dll" />
+    <Content Include="Lib\bass_tta.dll" />
     <Content Include="Lib\taglib-sharp.dll" />
   </ItemGroup>
   <ItemGroup />
