--- a/MPfm/branches/current/MPfm.Library/MPfm.Library.csproj
+++ b/MPfm/branches/current/MPfm.Library/MPfm.Library.csproj
@@ -60,6 +60,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MPfmGateway.cs" />
+    <Compile Include="Objects\History.cs" />
+    <Compile Include="Objects\Setting.cs" />
     <Compile Include="UpdateLibrary\UpdateLibraryStep.cs" />
     <Compile Include="UpdateLibrary\UpdateLibraryDoneData.cs" />
     <Compile Include="UpdateLibrary\UpdateLibraryProgressData.cs" />
@@ -67,7 +69,7 @@
     <Compile Include="UpdateLibrary\UpdateLibrary.cs" />
     <Compile Include="SQLiteGateway.cs" />
     <Compile Include="ConvertLibrary.cs" />
-    <Compile Include="Folder.cs" />
+    <Compile Include="Objects\Folder.cs" />
     <Compile Include="Library.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -75,6 +77,7 @@
     <Service Include="{3259AA49-8AA1-44D3-9025-A0B520596A8C}" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Scripts\1.00-1.01.sql" />
     <EmbeddedResource Include="Scripts\CreateDatabase.sql" />
     <Content Include="Lib\SQLite.Interop.dll" />
     <Content Include="Lib\System.Data.SQLite.dll" />
