MPfm 0.5.0.4 - Renamed the WaveFormMarkersLoops control to WaveFormDisplay.
git-svn-id: http://hamster-svn/svn/repos/base@189 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.WindowsControls/MPfm.WindowsControls.csproj
+++ b/MPfm/branches/current/MPfm.WindowsControls/MPfm.WindowsControls.csproj
@@ -73,11 +73,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Audio\WaveFormMarkersLoops.cs">
+    <Compile Include="Audio\WaveFormDisplay.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="Audio\WaveFormMarkersLoops.Designer.cs">
-      <DependentUpon>WaveFormMarkersLoops.cs</DependentUpon>
+    <Compile Include="Audio\WaveFormDisplay.Designer.cs">
+      <DependentUpon>WaveFormDisplay.cs</DependentUpon>
     </Compile>
     <Compile Include="Buttons-Toolbars\TrackBar.cs">
       <SubType>Component</SubType>
