MPfm 0.5.0.5 - Added Load Playlist button to Playlist window. - Added PlaylistTools to MPfm.Sound which now loads M3U and M3U8 files correctly. - Removed Id from Playlist object and added FileName and Format properties. - Set assemblies version to 0.5.0.5
Related to issue #182.


git-svn-id: http://hamster-svn/svn/repos/base@198 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.Sound/MPfm.Sound.csproj
+++ b/MPfm/branches/current/MPfm.Sound/MPfm.Sound.csproj
@@ -90,6 +90,8 @@
     <Compile Include="Bass.Net\Base.cs" />
     <Compile Include="ConvertAudio.cs" />
     <Compile Include="AudioFileFormat.cs" />
+    <Compile Include="PlaylistTools.cs" />
+    <Compile Include="PlaylistFileFormat.cs" />
     <Compile Include="PeakFile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="XingInfoHeaderReader.cs" />
