--- a/MPfm/branches/current/MPfm.Sound/MPfm.Sound.csproj
+++ b/MPfm/branches/current/MPfm.Sound/MPfm.Sound.csproj
@@ -78,8 +78,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AudioFile.cs" />
-    <Compile Include="AudioTools.cs" />
+    <Compile Include="AudioFiles\AudioFile.cs" />
+    <Compile Include="AudioFiles\AudioTools.cs" />
     <Compile Include="Bass.Net\Channel.cs" />
     <Compile Include="Bass.Net\ChannelType.cs" />
     <Compile Include="Bass.Net\DriverType.cs" />
@@ -88,10 +88,12 @@
     <Compile Include="Bass.Net\Device.cs" />
     <Compile Include="Bass.Net\Exception.cs" />
     <Compile Include="Bass.Net\Base.cs" />
-    <Compile Include="ConvertAudio.cs" />
-    <Compile Include="AudioFileFormat.cs" />
-    <Compile Include="PlaylistTools.cs" />
-    <Compile Include="PlaylistFileFormat.cs" />
+    <Compile Include="AudioFiles\ConvertAudio.cs" />
+    <Compile Include="AudioFiles\AudioFileFormat.cs" />
+    <Compile Include="Playlists\Playlist.cs" />
+    <Compile Include="Playlists\PlaylistItem.cs" />
+    <Compile Include="Playlists\PlaylistTools.cs" />
+    <Compile Include="Playlists\PlaylistFileFormat.cs" />
     <Compile Include="PeakFile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="XingInfoHeaderReader.cs" />
