MPfm 0.5.0.5 - Settings window: Added the Theme tab with a property grid and sample song browser. - Created SongGridViewTheme to be able to bind theme properties to a property grid. - SongGridView: Moved most theme properties to SongGridViewTheme.
Related to issue #211.


git-svn-id: http://hamster-svn/svn/repos/base@208 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.WindowsControls/MPfm.WindowsControls.csproj
+++ b/MPfm/branches/current/MPfm.WindowsControls/MPfm.WindowsControls.csproj
@@ -98,6 +98,7 @@
     </Compile>
     <Compile Include="Library\AlbumViewItem.cs" />
     <Compile Include="Library\AlbumViewCache.cs" />
+    <Compile Include="Library\SongGridViewTheme.cs" />
     <Compile Include="Library\SongGridViewMode.cs" />
     <Compile Include="Library\SongGridViewCache.cs" />
     <Compile Include="Library\SongGridViewColumn.cs" />
