--- a/MPfm/branches/current/MPfm.Library/MPfm.Library.csproj
+++ b/MPfm/branches/current/MPfm.Library/MPfm.Library.csproj
@@ -60,6 +60,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MPfmGateway.cs" />
+    <Compile Include="Objects\PlaylistFile.cs" />
     <Compile Include="Objects\History.cs" />
     <Compile Include="Objects\Setting.cs" />
     <Compile Include="UpdateLibrary\UpdateLibraryStep.cs" />
