Renamed the PlaybackEngineV4Demo project to MPfm.Player.Demo
git-svn-id: http://hamster-svn/svn/repos/base@215 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/PlaybackEngineV3/MPfm.Player.Demo.csproj
+++ b/MPfm/branches/current/PlaybackEngineV3/MPfm.Player.Demo.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{064ABDA7-31DC-495F-8214-ED2B13E05601}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>PlaybackEngineV4</RootNamespace>
-    <AssemblyName>PlaybackEngineV4</AssemblyName>
+    <RootNamespace>MPfm.Player.Demo</RootNamespace>
+    <AssemblyName>MPfm.Player.Demo</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SccProjectName>SAK</SccProjectName>
