--- a/MPfm/branches/current/PlaybackEngineV3/MPfm.Player.Demo.csproj
+++ b/MPfm/branches/current/PlaybackEngineV3/MPfm.Player.Demo.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="frmMain.resx">
       <DependentUpon>frmMain.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="frmSettings.resx">
       <DependentUpon>frmSettings.cs</DependentUpon>
