MPfm 0.5.0.5 - Migrated ListBox to new CustomFont class.
Related to issue #221.


git-svn-id: http://hamster-svn/svn/repos/base@220 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.WindowsControls/MPfm.WindowsControls.csproj
+++ b/MPfm/branches/current/MPfm.WindowsControls/MPfm.WindowsControls.csproj
@@ -122,7 +122,7 @@
     <Compile Include="Misc\HScrollBar.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="Misc\ListBox.cs">
+    <Compile Include="Lists\ListBox.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Audio\OutputMeter.cs">
@@ -140,10 +140,10 @@
     <Compile Include="Labels\LinkLabel.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="Views\ReorderListView.cs">
+    <Compile Include="Lists\ReorderListView.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="Views\ReorderListView.Designer.cs">
+    <Compile Include="Lists\ReorderListView.Designer.cs">
       <DependentUpon>ReorderListView.cs</DependentUpon>
     </Compile>
     <Compile Include="Panel-Forms\Panel.cs">
