mp4m.org 1.2.3 - Added Blog link to menu - Added Softpedia link to download page - Removed notice that Mantis is down.
git-svn-id: http://hamster-svn/svn/repos/base@226 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/mp4m.org/trunk/mp4m.org/mp4m.org.csproj
+++ b/mp4m.org/trunk/mp4m.org/mp4m.org.csproj
@@ -244,8 +244,7 @@
           <AutoAssignPort>False</AutoAssignPort>
           <DevelopmentServerPort>10000</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>
-          </IISUrl>
+          <IISUrl>http://lcl-www.mp4m.org:8080</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
