--- a/MPfm/branches/current/MPfm/MPfm.csproj
+++ b/MPfm/branches/current/MPfm/MPfm.csproj
@@ -251,6 +251,7 @@
     </Content>
     <Content Include="MPFM.ico" />
     <Content Include="MPfm_SmallOnly.ico" />
+    <None Include="Resources\database.png" />
     <None Include="Resources\user.png" />
     <None Include="Resources\MPFM_Splash_0.5.0.3.png" />
     <None Include="Resources\error.png" />
