--- a/MPfm/branches/current/MPfm/MPfm.csproj
+++ b/MPfm/branches/current/MPfm/MPfm.csproj
@@ -106,6 +106,12 @@
     <Compile Include="Configuration\MPfmConfiguration.cs" />
     <Compile Include="Configuration\Windows\WindowConfiguration.cs" />
     <Compile Include="Configuration\Windows\WindowsConfigurationSection.cs" />
+    <Compile Include="Other Screens\frmLoadPlaylist.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Other Screens\frmLoadPlaylist.Designer.cs">
+      <DependentUpon>frmLoadPlaylist.cs</DependentUpon>
+    </Compile>
     <Compile Include="Other Screens\frmAddEditLoop.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -186,6 +192,10 @@
     <EmbeddedResource Include="frmUpdateLibraryStatus.resx">
       <SubType>Designer</SubType>
       <DependentUpon>frmUpdateLibraryStatus.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Other Screens\frmLoadPlaylist.resx">
+      <DependentUpon>frmLoadPlaylist.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Other Screens\frmAddEditLoop.resx">
       <DependentUpon>frmAddEditLoop.cs</DependentUpon>
