--- a/MPfm/branches/current/MPfm.WindowsControls/MPfm.WindowsControls.csproj
+++ b/MPfm/branches/current/MPfm.WindowsControls/MPfm.WindowsControls.csproj
@@ -74,6 +74,7 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Audio\WaveFormDisplayTheme.cs" />
     <Compile Include="Audio\OutputMeterTheme.cs" />
     <Compile Include="Audio\WaveFormDisplay.cs">
       <SubType>Component</SubType>
