--- a/MPfm/branches/current/MPfm.Sound/MPfm.Sound.csproj
+++ b/MPfm/branches/current/MPfm.Sound/MPfm.Sound.csproj
@@ -99,6 +99,10 @@
     <Compile Include="PeakFile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tags\APETag.cs" />
+    <Compile Include="Tags\ID3v2Tag.cs" />
+    <Compile Include="Tags\ID3v2Metadata.cs" />
+    <Compile Include="Tags\SV8Tag.cs" />
+    <Compile Include="Tags\SV8Metadata.cs" />
     <Compile Include="XingInfoHeaderReader.cs" />
   </ItemGroup>
   <ItemGroup>
