MPfm 0.5.1.1 - Added the SV7Metadata and SV7Tag classes for reading SV7 tags from MPC files. Still too early to be used (25% complete). - Added the SV8TagNotFoundException to SV8Metadata. - AudioFile: Added the SV8/SV7 try catch routine.
Related to issue #258 and issue #261.


git-svn-id: http://hamster-svn/svn/repos/base@249 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.Sound/MPfm.Sound.csproj
+++ b/MPfm/branches/current/MPfm.Sound/MPfm.Sound.csproj
@@ -99,6 +99,8 @@
     <Compile Include="PeakFile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tags\APETag.cs" />
+    <Compile Include="Tags\SV7Metadata.cs" />
+    <Compile Include="Tags\SV7Tag.cs" />
     <Compile Include="Tags\ID3v2Tag.cs" />
     <Compile Include="Tags\ID3v2Metadata.cs" />
     <Compile Include="Tags\SV8Tag.cs" />
