MPfm 0.5.1.1 - Settings Window: Added "Reset to default" button in the Audio Settings tab. - Settings Window: Now using the Player to test devices. All the settings are used in the test. - Player: Added mixer sample rate to InitializeDevice.
Related to issue #243 and issue #244.


git-svn-id: http://hamster-svn/svn/repos/base@250 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm/MPfm.csproj
+++ b/MPfm/branches/current/MPfm/MPfm.csproj
@@ -261,6 +261,7 @@
     </Content>
     <Content Include="MPFM.ico" />
     <Content Include="MPfm_SmallOnly.ico" />
+    <None Include="Resources\cog.png" />
     <None Include="Resources\database.png" />
     <None Include="Resources\user.png" />
     <None Include="Resources\MPFM_Splash_0.5.0.3.png" />
