--- a/MPfm/branches/current/MPfm.WindowsControls/MPfm.WindowsControls.csproj
+++ b/MPfm/branches/current/MPfm.WindowsControls/MPfm.WindowsControls.csproj
@@ -41,7 +41,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>bin\Debug28\</OutputPath>
+    <OutputPath>..\Output\</OutputPath>
     <DefineConstants>TRACE;DEBUG</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
