MPfm 0.5.1.2 - Changed PlaybackEngineV3 folder to MPfm.Player.Demo (changed solution file and other stuff).
git-svn-id: http://hamster-svn/svn/repos/base@263 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.Player.Demo/App.config
+++ b/MPfm/branches/current/MPfm.Player.Demo/App.config
@@ -6,7 +6,7 @@
     <add key="UpdatePeriod" value="0010" />
     <add key="UpdateThreads" value="1" />
     <add key="DriverType" value="ASIO" />
-    <add key="DeviceId" value="0" />
+    <add key="DeviceId" value="0" />rf
     <add key="DeviceName" value="ASIO DirectX Full Duplex Driver" />-->
   </appSettings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
