Test submit for MPfm.Player.Demo folder.
git-svn-id: http://hamster-svn/svn/repos/base@264 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.Player.Demo/App.config
+++ b/MPfm/branches/current/MPfm.Player.Demo/App.config
@@ -9,4 +9,7 @@
     <add key="DeviceId" value="0" />rf
     <add key="DeviceName" value="ASIO DirectX Full Duplex Driver" />-->
   </appSettings>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
+  </startup>
+</configuration>
