MPfm 0.5.2.0 - Added .NET Async CTP Library to the project. - Player: The audio buffer is now cleared when skipping to a new position or when skipping to a new song. - Player: The position returned by the player now counts in for the buffer size lag. In fact it is now using the           main stream output position with a offset position (since the main output position is "infinite" and           reset to 0 when the audio buffer needs to be cleared).           It's not 100% done yet though; I need to add a syncmix proc to set the offset position exactly when the           new song is heard. However the offset is 100% accurate already (since the channel is locked when getting the           position, and the data available in the buffer is also added). - UpdateLibrary: The new prototype drops Rx and uses only ASYNC for now. Works fine so far, but the application                  gets lagged when updating files (especially when generating peak files). - UpdateLibrary: A prototype UI for the background update library has been added to the main form.
Related to issue #70, issue #160, issue #168 and issue #275.


git-svn-id: http://hamster-svn/svn/repos/base@276 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.Library/MPfm.Library.csproj
+++ b/MPfm/branches/current/MPfm.Library/MPfm.Library.csproj
@@ -37,6 +37,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AsyncCtpLibrary, Version=1.0.4107.18181, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="Bass.Net, Version=2.4.8.0, Culture=neutral, PublicKeyToken=b7566c273e6ef480, processorArchitecture=MSIL" />
     <Reference Include="PresentationCore" />
     <Reference Include="System" />
@@ -82,6 +83,8 @@
     <EmbeddedResource Include="Scripts\1.01-1.02.sql" />
     <EmbeddedResource Include="Scripts\1.00-1.01.sql" />
     <EmbeddedResource Include="Scripts\CreateDatabase.sql" />
+    <Content Include="Lib\AsyncCtpLibrary.dll" />
+    <Content Include="Lib\AsyncCtpLibrary.xml" />
     <Content Include="Lib\SQLite.Interop.dll" />
     <Content Include="Lib\System.Data.SQLite.dll" />
     <Content Include="Lib\System.Data.SQLite.Linq.dll" />
