MPfm 0.5.2.0 - Settings window: Added settings for peak file directory and limit.   Only the UI is done for now.
Related to issue #200.


git-svn-id: http://hamster-svn/svn/repos/base@283 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm/MPfm.csproj
+++ b/MPfm/branches/current/MPfm/MPfm.csproj
@@ -264,6 +264,7 @@
     </Content>
     <Content Include="MPFM.ico" />
     <Content Include="MPfm_SmallOnly.ico" />
+    <None Include="Resources\folder_explore.png" />
     <None Include="Resources\cog.png" />
     <None Include="Resources\database.png" />
     <None Include="Resources\user.png" />
