MPfm 0.5.2.1 - Set assembly version to 0.5.2.1 - Activated profiling on all projects - Activated Code Analysis rules (Microsoft Minimum Recommended Rules) as warnings
git-svn-id: http://hamster-svn/svn/repos/base@298 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.Fonts/MPfm.Fonts.csproj
+++ b/MPfm/branches/current/MPfm.Fonts/MPfm.Fonts.csproj
@@ -45,7 +45,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
     <DocumentationFile>..\Output\MPfm.Fonts.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
