MPfm 0.5.2.1 - Fixed most Code Analysis warnings for MPfm.Sound.   (Added Serializable to exceptions, fixed and changed most try/catch blocks dealing with IDisposable objects)
Related to issue #287.


git-svn-id: http://hamster-svn/svn/repos/base@302 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.WindowsControls/MPfm.WindowsControls.csproj
+++ b/MPfm/branches/current/MPfm.WindowsControls/MPfm.WindowsControls.csproj
@@ -101,9 +101,7 @@
     </Compile>
     <Compile Include="Fonts\EmbeddedFontCollection.cs" />
     <Compile Include="Fonts\EmbeddedFontHelper.cs" />
-    <Compile Include="Library\AlbumView.cs">
-      <SubType>Component</SubType>
-    </Compile>
+    <Compile Include="Library\AlbumView.cs" />
     <Compile Include="Library\AlbumView.Designer.cs">
       <DependentUpon>AlbumView.cs</DependentUpon>
     </Compile>
