MPfm 0.5.2.1 - Added new audio formats to AudioFileFormat class. - Added the AudioFileFormatExtension and AudioFileFormatExtensions class to list the audio file format and their supported extensions. - Added comments to the EmbeddedFont class.
git-svn-id: http://hamster-svn/svn/repos/base@304 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.Sound/MPfm.Sound.csproj
+++ b/MPfm/branches/current/MPfm.Sound/MPfm.Sound.csproj
@@ -81,6 +81,8 @@
   <ItemGroup>
     <Compile Include="AudioFiles\AudioFile.cs" />
     <Compile Include="AudioFiles\AudioTools.cs" />
+    <Compile Include="AudioFiles\AudioFileFormatExtension.cs" />
+    <Compile Include="AudioFiles\AudioFileFormatExtensions.cs" />
     <Compile Include="Bass.Net\Channel.cs" />
     <Compile Include="Bass.Net\ChannelType.cs" />
     <Compile Include="Bass.Net\DriverType.cs" />
