MPfm 0.5.2.1 - Added fix for loading labels in design time - Added more BASS plugins
git-svn-id: http://hamster-svn/svn/repos/base@305 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.Sound/MPfm.Sound.csproj
+++ b/MPfm/branches/current/MPfm.Sound/MPfm.Sound.csproj
@@ -138,7 +138,10 @@
     <Content Include="Lib\bassasio.dll" />
     <Content Include="Lib\bassflac.dll" />
     <Content Include="Lib\basswasapi.dll" />
+    <Content Include="Lib\basswma.dll" />
     <Content Include="Lib\basswv.dll" />
+    <Content Include="Lib\bass_aac.dll" />
+    <Content Include="Lib\bass_alac.dll" />
     <Content Include="Lib\bass_ape.dll" />
     <Content Include="Lib\bass_fx.dll" />
     <Content Include="Lib\bass_mpc.dll" />
