MPfm 0.5.3.0 - Set assembly info versions to 0.5.3.0 - Changed all "Event Arguments" and "Event Sender" to "Event arguments" and "Event sender" for standardizing XML comments. - Added new menu items to the Help menu (new link to the User Manual).
Related to issue #293, issue #294 and issue #295.


git-svn-id: http://hamster-svn/svn/repos/base@314 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm/MPfm.csproj
+++ b/MPfm/branches/current/MPfm/MPfm.csproj
@@ -264,6 +264,8 @@
     </Content>
     <Content Include="MPFM.ico" />
     <Content Include="MPfm_SmallOnly.ico" />
+    <None Include="Resources\help.png" />
+    <None Include="Resources\package_link.png" />
     <None Include="Resources\folder_explore.png" />
     <None Include="Resources\cog.png" />
     <None Include="Resources\database.png" />
