MPfm 0.5.3.0. - Added a Shuffle playlist button in the Playlist window and a Shuffle button in the Main window - Changed the glyphs for loops and repeats to be coherent with the shuffle glyph.
Related to issue #183 and issue #296.


git-svn-id: http://hamster-svn/svn/repos/base@319 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm/MPfm.csproj
+++ b/MPfm/branches/current/MPfm/MPfm.csproj
@@ -264,6 +264,10 @@
     </Content>
     <Content Include="MPFM.ico" />
     <Content Include="MPfm_SmallOnly.ico" />
+    <None Include="Resources\arrow_rotate_clockwise.png" />
+    <None Include="Resources\arrow_switch1.png" />
+    <None Include="Resources\arrow_redo.png" />
+    <None Include="Resources\arrow_switch.png" />
     <None Include="Resources\help.png" />
     <None Include="Resources\package_link.png" />
     <None Include="Resources\folder_explore.png" />
