--- a/MPfm/branches/current/MPfm/MPfm.csproj
+++ b/MPfm/branches/current/MPfm/MPfm.csproj
@@ -109,6 +109,12 @@
     <Compile Include="Configuration\MPfmConfiguration.cs" />
     <Compile Include="Configuration\Windows\WindowConfiguration.cs" />
     <Compile Include="Configuration\Windows\WindowsConfigurationSection.cs" />
+    <Compile Include="Other Screens\frmThemes.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Other Screens\frmThemes.Designer.cs">
+      <DependentUpon>frmThemes.cs</DependentUpon>
+    </Compile>
     <Compile Include="Other Screens\frmLoadPlaylist.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -196,6 +202,10 @@
       <SubType>Designer</SubType>
       <DependentUpon>frmUpdateLibraryStatus.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Other Screens\frmThemes.resx">
+      <DependentUpon>frmThemes.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <EmbeddedResource Include="Other Screens\frmLoadPlaylist.resx">
       <DependentUpon>frmLoadPlaylist.cs</DependentUpon>
       <SubType>Designer</SubType>
@@ -264,8 +274,8 @@
     </Content>
     <Content Include="MPFM.ico" />
     <Content Include="MPfm_SmallOnly.ico" />
+    <None Include="Resources\layout.png" />
     <None Include="Resources\arrow_rotate_clockwise.png" />
-    <None Include="Resources\arrow_switch1.png" />
     <None Include="Resources\arrow_redo.png" />
     <None Include="Resources\arrow_switch.png" />
     <None Include="Resources\help.png" />
@@ -290,7 +300,6 @@
     <None Include="Resources\page_white_text.png" />
     <None Include="Resources\tick.png" />
     <None Include="Resources\arrow_refresh.png" />
-    <None Include="Resources\arrow_right1.png" />
     <None Include="Resources\arrow_right.png" />
     <None Include="app.config">
       <SubType>Designer</SubType>
