MPfm 0.5.3.0 - Added the MainWindowTheme and SecondaryWindowTheme classes. - Added the MainWindowTheme to the Theme window.
Related to issue #219.


git-svn-id: http://hamster-svn/svn/repos/base@321 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.WindowsControls/MPfm.WindowsControls.csproj
+++ b/MPfm/branches/current/MPfm.WindowsControls/MPfm.WindowsControls.csproj
@@ -170,7 +170,8 @@
     <Compile Include="Audio\WaveForm.Designer.cs">
       <DependentUpon>WaveForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Themes\GeneralTheme.cs" />
+    <Compile Include="Themes\MainWindowTheme.cs" />
+    <Compile Include="Themes\SecondaryWindowTheme.cs" />
     <Compile Include="Themes\Theme.cs" />
     <Compile Include="Themes\ThemeHelper.cs" />
     <Service Include="{94E38DFF-614B-4cbd-B67C-F211BB35CE8B}" />
