MPfm 0.5.3.0 - The embedded fonts are now visible in Visual Studio for the Label control. - Added a generic Control class with a LoadEmbeddedFonts method.
Related to issue #297.


git-svn-id: http://hamster-svn/svn/repos/base@323 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.WindowsControls/MPfm.WindowsControls.csproj
+++ b/MPfm/branches/current/MPfm.WindowsControls/MPfm.WindowsControls.csproj
@@ -120,6 +120,9 @@
       <DependentUpon>SongGridView.cs</DependentUpon>
     </Compile>
     <Compile Include="Library\SongGridViewImageCache.cs" />
+    <Compile Include="Misc\Control.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Misc\HScrollBar.cs">
       <SubType>Component</SubType>
     </Compile>
