MPfm 0.5.3.0 - Added the MixerChannel class, which inherits from the Channel class.   Added the CreateMixerStream method.
Related to issue #299 and issue #300.


git-svn-id: http://hamster-svn/svn/repos/base@330 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.Sound/MPfm.Sound.csproj
+++ b/MPfm/branches/current/MPfm.Sound/MPfm.Sound.csproj
@@ -85,6 +85,7 @@
     <Compile Include="AudioFiles\AudioFileFormatExtensions.cs" />
     <Compile Include="Bass.Net\Channel.cs" />
     <Compile Include="Bass.Net\ChannelType.cs" />
+    <Compile Include="Bass.Net\MixerChannel.cs" />
     <Compile Include="Bass.Net\DriverType.cs" />
     <Compile Include="Bass.Net\TestDevice.cs" />
     <Compile Include="Bass.Net\DeviceHelper.cs" />
