MPfm 0.5.3.0 - Settings window: Added sample rate combo box.                    Added status message / icon which is updated when the audio settings state changes.                    Added the Save Audio Settings button.
Related to issue #316, issue #317 and issue #319.


git-svn-id: http://hamster-svn/svn/repos/base@339 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm/MPfm.csproj
+++ b/MPfm/branches/current/MPfm/MPfm.csproj
@@ -274,6 +274,7 @@
     </Content>
     <Content Include="MPFM.ico" />
     <Content Include="MPfm_SmallOnly.ico" />
+    <None Include="Resources\bullet_go.png" />
     <None Include="Resources\layout.png" />
     <None Include="Resources\arrow_rotate_clockwise.png" />
     <None Include="Resources\arrow_redo.png" />
