MPfm 0.6.0.0 - Added the Gradient class for serializing color properties more easily. - Added XmlSerializer to the Load and Save methods of the ThemeHelper class. - Added the Color property to the CustomFont class. - Started to add Gradient properties to MainWindowTheme.
Related to issue #223 and issue #224.


git-svn-id: http://hamster-svn/svn/repos/base@362 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.WindowsControls/MPfm.WindowsControls.csproj
+++ b/MPfm/branches/current/MPfm.WindowsControls/MPfm.WindowsControls.csproj
@@ -167,6 +167,7 @@
     <Compile Include="Audio\WaveForm.Designer.cs">
       <DependentUpon>WaveForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Misc\Gradient.cs" />
     <Compile Include="Themes\MainWindowTheme.cs" />
     <Compile Include="Themes\SecondaryWindowTheme.cs" />
     <Compile Include="Themes\Theme.cs" />
